--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ body {
   margin: 3px;
   box-shadow: 1px 1px 3px 0px #888888;
 }
+.buttonPanel{
+display: flex;
+justify-content: space-between; 
+}
